<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mainView"
            type="com.ruffian.android.mvvm.IMainView" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_content"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <com.ruffian.android.mvvm.customview.FooterTabView
                android:id="@+id/tab_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->mainView.onTabClickEvent(0)}"
                app:tab_icon_default="@mipmap/ic_launcher_round"
                app:tab_icon_selected="@mipmap/ic_launcher"
                app:tab_text="@string/m_main" />

            <com.ruffian.android.mvvm.customview.FooterTabView
                android:id="@+id/tab_knowledge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->mainView.onTabClickEvent(1)}"
                app:tab_icon_default="@mipmap/ic_launcher_round"
                app:tab_icon_selected="@mipmap/ic_launcher"
                app:tab_text="@string/m_knowledge" />

            <com.ruffian.android.mvvm.customview.FooterTabView
                android:id="@+id/tab_official_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->mainView.onTabClickEvent(2)}"
                app:tab_icon_default="@mipmap/ic_launcher_round"
                app:tab_icon_selected="@mipmap/ic_launcher"
                app:tab_text="@string/m_official_account" />

            <com.ruffian.android.mvvm.customview.FooterTabView
                android:id="@+id/tab_navigation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->mainView.onTabClickEvent(3)}"
                app:tab_icon_default="@mipmap/ic_launcher_round"
                app:tab_icon_selected="@mipmap/ic_launcher"
                app:tab_text="@string/m_navigation" />

            <com.ruffian.android.mvvm.customview.FooterTabView
                android:id="@+id/tab_project"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{()->mainView.onTabClickEvent(4)}"
                app:tab_icon_default="@mipmap/ic_launcher_round"
                app:tab_icon_selected="@mipmap/ic_launcher"
                app:tab_text="@string/m_project" />

        </LinearLayout>


    </LinearLayout>
</layout>