<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="LoginDataBinding">

        <variable
            name="loginView"
            type="com.ruffian.android.mvvm.module.account.view.IAccountView.ILoginView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            style="@style/wrap"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/guide_line_v_40p"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_v_40p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <com.ruffian.library.widget.REditText
            android:id="@+id/et_account"
            style="@style/wrap_tv_14_black"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_30"
            android:drawablePadding="@dimen/dp_4"
            android:hint="@string/hint_account"
            android:text="632835821@qq.com"
            app:icon_height_left="@dimen/dp_22"
            app:icon_normal_left="@mipmap/ic_launcher"
            app:icon_width_left="@dimen/dp_22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line_v_40p" />

        <com.ruffian.library.widget.REditText
            android:id="@+id/et_psw"
            style="@style/wrap_tv_14_black"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_30"
            android:drawablePadding="@dimen/dp_4"
            android:hint="@string/hint_psw"
            android:inputType="textPassword"
            android:text="zhong920306"
            app:icon_height_left="@dimen/dp_22"
            app:icon_normal_left="@mipmap/ic_launcher"
            app:icon_width_left="@dimen/dp_22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_account" />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/tv_login"
            style="@style/wrap_tv_14_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center"
            android:onClick="@{(view)->loginView.onLoginClickEvent(etAccount.getText().toString(),etPsw.getText().toString())}"
            android:text="@string/login"
            app:background_normal="@array/array_btn_bg"
            app:corner_radius="@dimen/dp_45"
            app:gradient_orientation="LEFT_RIGHT"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_psw" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>